--- a/phone.css
+++ b/phone.css
@@ -1,17 +1,22 @@
 @media (min-width:0) and (max-width:500px) {
-.navigation{
-    display: block;
-}
-.home .wee{
-    display: block;
-}
+    .navigation {
+        display: block;
+        position: sticky;
+        top: 0;
+        z-index: 1;
+    }
+
+    .home .wee {
+        display: block;
+    }
+
     .home .heading {
         font-size: 36px;
         color: rgb(255, 13, 0);
         margin-left: 17px;
         position: relative;
-    top: 10px;
-    margin-bottom: 10px;
+        top: 10px;
+        margin-bottom: 10px;
 
     }
 
@@ -42,21 +47,24 @@
         top: 9px;
         margin-bottom: 9px;
     }
+
     .about .know {
         font-size: 16px;
-    position: relative;
-    right: 55px;
-    bottom: 5px;
+        position: relative;
+        right: 55px;
+        bottom: 5px;
     }
+
     .about .detail {
         font-size: 11px;
-    display: block;
-    width: 62%;
-    position: relative;
-    /* padding: -10px; */
-    bottom: -14px;
-    left: -16px;
+        display: block;
+        width: 62%;
+        position: relative;
+        /* padding: -10px; */
+        bottom: -14px;
+        left: -16px;
     }
+
     .about .detail .ansh img {
         width: 100%;
         height: 122px;
@@ -67,7 +75,7 @@
         position: relative;
         margin-left: 63px;
         bottom: 15px;
-    margin-bottom: 15px;
+        margin-bottom: 15px;
     }
 
     .service .heading2 {
@@ -77,38 +85,50 @@
         text-shadow: 2px 2px 2px;
         margin-bottom: 57px;
     }
+
     .service .heading2 .spam3 {
-        font-size :56px;
-    text-shadow :2px 2px 2px black;
+        font-size: 56px;
+        text-shadow: 2px 2px 2px black;
     }
+
     .service .con2 .cont {
         font-size: 11px;
         width: 88%;
         padding: 17px;
         position: relative;
         top: -66px;
-    margin: 0 auto;
+        margin: 0 auto;
     }
+
     .service .con2 .cont .cont2 {
         color: beige;
-    font-size: 2px;
-    margin-top: 2px;
-    position: relative;
-    right: -13px;
-}
+        font-size: 23px;
+        margin-top: 2px;
+        position: relative;
+        right: -13px;
     }
 
     .service .con2 {
         display: block;
     }
+
     .service .con2 img {
-       width: 67%;
+        width: 78%;
+        height: 116px;
         border-radius: 19px;
         position: relative;
         top: -57px;
-        left: -1px;
+        left: 29px;
     }
-     .lm {
-    font-size: 10px;
+
+    .service .cont1 {
+        font-size: 0%;
+        width: 131%;
+        padding: -17px;
+        position: relative;
+        top: -113px;
+        margin: 0 auto;
+        margin-left: -53px;
+        padding: unset;
     }
 }
