--- a/index.css
+++ b/index.css
@@ -118,7 +118,7 @@ color:hsl(189, 65%, 53%);
     color:rgb(0, 238, 255);
     margin-left: 30px;
     text-shadow: 6px 1px 9px black;
-
+    margin-bottom: 28px;
   }
   .con{
     font-size: 25px;
@@ -196,7 +196,7 @@ color:hsl(189, 65%, 53%);
     color: #7a1414;
     text-shadow: 3px 4px 7px white ;
     position: relative;
-    bottom: -20px;
+    bottom: -23px;
   }
   .about{
     background-color:  rgb(222, 196, 162);
@@ -236,7 +236,7 @@ color:hsl(189, 65%, 53%);
   margin-left: 70px;
   color: black;
   text-shadow: 3px 4px 7px white;
-
+  margin-bottom: 10px;
  }
  .heading2{
   font-size: 48px;
@@ -366,8 +366,9 @@ color:hsl(189, 65%, 53%);
   text-align: center;
   font-size: 55px;
   position: relative;
-  bottom: -18px;
   text-shadow: 3px 3px 0px white;
+  top: 47px;
+    margin-bottom: 83px;
 }
 .subheading7{
   font-size: 28px;
@@ -404,11 +405,11 @@ color:hsl(189, 65%, 53%);
 }
 .subh{
   font-size: 28px;
-  color: brown;
-  margin-left: -10px;
-  margin-top: -50px;
-  position: relative;
-  bottom: -27px;
+    color: brown;
+    margin-left: -10px;
+    margin-top: -55px;
+    position: relative;
+    bottom: -1spx;
 }
 .conta .left .row .icon{
   margin: 8px;
@@ -419,7 +420,7 @@ color:hsl(189, 65%, 53%);
 .contact .row{
   display: flex;
     margin-left: -74px;
-    margin-top: 20px;
+    margin-top: 40px;
 }
 .conta .right .input .tx{
   margin-top: 11px;
@@ -535,4 +536,73 @@ background-color: black;
 #myForm{
   position: relative;
     bottom: -27px;
+}
+input{
+  width: 125%;
+    border: none;
+    height: 35px;
+    padding: 10px;
+    border-radius: 10px;
+    font-size: 16px;
+    margin-bottom: 15px;
+}
+textarea{
+  width: 125%;
+    height: 195px;
+    border: none;
+    font-size: 16px;
+    border-radius: 10px;
+    padding: 10px;
+}
+.contact.buttons-containers {
+  width: 20%;
+  /* height: 100vh; */
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+.contact button {
+  background: white;
+  border: solid 2px black;
+  padding: .3em 0.4em;
+  font-size: 1rem;
+  margin-left: 4px;
+  margin-top: 10px;
+  
+}
+.contact .button-arounders {
+  font-size: 1rem;
+  background: hsl(146, 56%, 26%);
+  color: hsl(190deg, 10%, 95%);
+  
+  
+ box-shadow: 0 0px 0px hsla(195, 74%, 11%, 0.2);
+  transfrom: translateY(0);
+  border-top-left-radius: 10px;
+  border-top-right-radius: 10px;
+  border-bottom-left-radius: 10px;
+  border-bottom-right-radius: 10px;
+  
+  --dur: .15s;
+  --delay: .15s;
+  --radius: 16px;
+  
+  transition:
+    border-top-left-radius var(--dur) var(--delay) ease-out,
+    border-top-right-radius var(--dur) calc(var(--delay) * 2) ease-out,
+    border-bottom-right-radius var(--dur) calc(var(--delay) * 3) ease-out,
+    border-bottom-left-radius var(--dur) calc(var(--delay) * 4) ease-out,
+    box-shadow calc(var(--dur) * 4) ease-out,
+    transform calc(var(--dur) * 4) ease-out;
+}
+
+.contact .button-arounders:hover,
+.contact .button-arounders:focus {
+  box-shadow: 0 4px 8px hsla(190deg, 15%, 5%, .2);
+  transform: translateY(-4px);
+  background: hsl(189, 69%, 15%);
+  border-top-left-radius: var(--radius);
+  border-top-right-radius: var(--radius);
+  border-bottom-left-radius: var(--radius);
+  border-bottom-right-radius: var(--radius);
 }
